--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
 
     steps:
       - 
+        name: Check out code
+        uses: actions/checkout@v3
+      - 
         name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
