feat: build tag then push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           REPOSITORY: docker-on-aws-tf/nodejs
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:latest .
+          docker build -t $REPOSITORY:latest .
           docker tag $REPOSITORY:latest $REGISTRY/$REPOSITORY:latest
           docker push $REGISTRY/$REPOSITORY:latest
 
